# aircraft_flight_mechanics

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  aircraft_flight_mechanics  cmake_install.cmake  compile_commands.json  main.cpp  readme.md
.cache/clangd/index/: atmosphere.hpp.F60EFDFC67589ED1.idx  framesnrotations.h.FF66147B582BC9C9.idx  framesnrotations.hpp.C7F369D97A1033F0.idx  main.cpp.C0FFECF3E4F5F506.idx
include/: aerodynamics.hpp  aircraftmotion.hpp  atmosphere.hpp  framesnrotations.hpp
src/: aircraftmotion.h  aircraftmotion.hpp  atmosphere.hpp  framesnrotations.h  framesnrotations.hpp
tests/: test_atmosphere.cpp
